--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Cookie Monster EXE
+name: Build Cookie Monster BOF
 
 on:
   push:
@@ -20,13 +20,13 @@ jobs:
         sudo apt update
         sudo apt install -y mingw-w64
 
-    - name: Build EXE (cookie-graber)
+    - name: Build EXE from cookie-monster-bof.c
       run: |
-        x86_64-w64-mingw32-gcc cookie-graber.c -o cookie-graber_x64.exe -lshlwapi -lcrypt32
+        x86_64-w64-mingw32-gcc cookie-monster-bof.c -o cookie-monster.exe -lshlwapi -lcrypt32
         ls -l
 
-    - name: Upload Compiled EXE Artifact
+    - name: Upload Compiled EXE
       uses: actions/upload-artifact@v4
       with:
-        name: cookie-graber-exe
-        path: cookie-graber_x64.exe
+        name: cookie-monster-exe
+        path: cookie-monster.exe
