--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,13 +20,13 @@ jobs:
         sudo apt update
         sudo apt install -y mingw-w64
 
-    - name: Build EXE from cookie-monster-bof.c
+    - name: Build BOF Object (.o)
       run: |
-        x86_64-w64-mingw32-gcc cookie-monster-bof.c -o cookie-monster.exe -lshlwapi -lcrypt32
+        x86_64-w64-mingw32-gcc -c cookie-monster-bof.c -o cookie-monster-bof.x64.o
         ls -l
 
-    - name: Upload Compiled EXE
+    - name: Upload BOF Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: cookie-monster-exe
-        path: cookie-monster.exe
+        name: cookie-monster-bof
+        path: cookie-monster-bof.x64.o
